// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`redux/actions/serviceApi/resetPassword error 1`] = `
Array [
  Object {
    "payload": Object {
      "dataKey": "passwordReset",
      "manifest": Object {
        "reserved": true,
      },
      "request": Object {
        "data": Object {
          "password": "12345678",
          "password_confirmation": "12345678",
          "reset_password_token": "reset_password_token_xxx",
        },
        "method": "patch",
        "url": "/users/password",
      },
    },
    "type": "serviceApi/RESET_PASSWORD",
  },
  Object {
    "error": Object {
      "message": "serviceApi/RESET_PASSWORD request failed",
      "response": Object {
        "data": Object {
          "errors": Array [
            Object {
              "message": "serviceApi/RESET_PASSWORD request failed",
            },
          ],
        },
        "status": 500,
      },
    },
    "meta": Object {
      "previousAction": Object {
        "payload": Object {
          "dataKey": "passwordReset",
          "manifest": Object {
            "reserved": true,
          },
          "request": Object {
            "data": Object {
              "password": "12345678",
              "password_confirmation": "12345678",
              "reset_password_token": "reset_password_token_xxx",
            },
            "method": "patch",
            "url": "/users/password",
          },
        },
        "type": "serviceApi/RESET_PASSWORD",
      },
    },
    "type": "serviceApi/RESET_PASSWORD:ERROR",
  },
]
`;

exports[`redux/actions/serviceApi/resetPassword success 1`] = `
Array [
  Object {
    "payload": Object {
      "dataKey": "passwordReset",
      "manifest": Object {
        "reserved": true,
      },
      "request": Object {
        "data": Object {
          "password": "12345678",
          "password_confirmation": "12345678",
          "reset_password_token": "reset_password_token_xxx",
        },
        "method": "patch",
        "url": "/users/password",
      },
    },
    "type": "serviceApi/RESET_PASSWORD",
  },
  Object {
    "meta": Object {
      "previousAction": Object {
        "payload": Object {
          "dataKey": "passwordReset",
          "manifest": Object {
            "reserved": true,
          },
          "request": Object {
            "data": Object {
              "password": "12345678",
              "password_confirmation": "12345678",
              "reset_password_token": "reset_password_token_xxx",
            },
            "method": "patch",
            "url": "/users/password",
          },
        },
        "type": "serviceApi/RESET_PASSWORD",
      },
    },
    "payload": Object {
      "data": Object {},
    },
    "type": "serviceApi/RESET_PASSWORD:SUCCESS",
  },
]
`;
